removed case insensitivity from username proposal protocol